@@ -40,27 +40,56 @@
                     </includes>
                 </configuration>
             </plugin>
-             <plugin>
-               <groupId>org.apache.maven.plugins</groupId>
-               <artifactId>maven-surefire-plugin</artifactId>
-               <version>3.2.5</version>
-               <configuration>
-                 <argLine>
-                   --add-exports java.base/java.lang=ALL-UNNAMED
-                   --add-exports java.desktop/sun.awt=ALL-UNNAMED
-                   --add-exports java.desktop/sun.java2d=ALL-UNNAMED
-                   -Djava.library.path=${project.basedir}/src/lib/jogl
+                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>3.6.0</version>
+                    <executions>
+                      <execution>
+                        <id>unpack-natives</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                          <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                          <artifactItems>
+                            <!-- Unpack JOGL natives -->
+                            <artifactItem>
+                              <groupId>org.jogamp.jogl</groupId>
+                              <artifactId>jogl-all</artifactId>
+                              <version>2.3.2</version>
+                              <classifier>natives-linux-amd64</classifier>
+                              <overWrite>true</overWrite>
+                              <outputDirectory>${project.build.directory}/natives</outputDirectory>
+                            </artifactItem>
+                            <artifactItem>
+                              <groupId>org.jogamp.gluegen</groupId>
+                              <artifactId>gluegen-rt</artifactId>
+                              <version>2.3.2</version>
+                              <classifier>natives-linux-amd64</classifier>
+                              <overWrite>true</overWrite>
+                              <outputDirectory>${project.build.directory}/natives</outputDirectory>
+                            </artifactItem>
+                          </artifactItems>
+                        </configuration>
+                      </execution>
+                    </executions>
+                  </plugin>
+                  <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.2.5</version>
+                    <configuration>
+                      <argLine>
+                        --add-exports java.base/java.lang=ALL-UNNAMED
+                        --add-exports java.desktop/sun.awt=ALL-UNNAMED
+                        --add-exports java.desktop/sun.java2d=ALL-UNNAMED
+                        -Djava.library.path=${project.build.directory}/natives
                         -Xmx2048m
-                        -XX:MaxPermSize=512m
+                        -Djava.awt.headless=true
                       </argLine>
                       <forkCount>1</forkCount>
                       <reuseForks>true</reuseForks>
-                      <systemProperties>
-                        <property>
-                          <name>java.awt.headless</name>
-                          <value>false</value>
-                        </property>
-                      </systemProperties>
                     </configuration>
                   </plugin>
              <plugin>
